<resources>
    <string name="app_name">Countries Factbook</string>
    <string name="action_search">Search</string>
    <string name="country_label_tv">Country: </string>
    <string name="country_name_tv">//null//</string>
    <string name="formal_name_label_tv">Full Name: </string>
    <string name="capital_label_tv">Capital: </string>
    <string name="currency_label_tv">Currency: </string>
    <string name="type_label_tv">Type:</string>
    <string name="tel_code_label_tv">Tel Code:</string>
    <string name="currency_code_label_tv">Currency code:</string>
    <string name="letter_code_label_tv">Letter Code:</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="search_hint">Enter Country</string>
    <string name="title_activity_">Ac</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="internet_code_label_tv">Internet .tld: </string>
    <string name="wiki">More info on Wikipedia</string>
    <string name="app_version">Version: 1.0.0</string>
</resources>
